--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="TextUtils is a utility which can be used to manipulate text"
     />
 
     <link
@@ -16,7 +16,9 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <title>React App</title>
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png"/>
+    <title>TExt Utils home</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
